// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph 1`] = `
<p>
  This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</p>
`;

exports[`paragraph with a drop cap 1`] = `
<p>
  <span>
    T
  </span>
  his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</p>
`;

exports[`paragraph with a short text and a drop cap 1`] = `
<p>
  <span>
    T
  </span>
  his being Black History
</p>
`;
